[package]
name = "my-redis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
async-bincode = "0.7"
futures = "0.3"